--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sc-tweetnacl",
   "version": "1.0.0",
   "description": "SC Sodium",
-  "main": "nacl-fast.js",
+  "main": "nacl.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
